ansible/k8s/files/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: argocd
spec:
  selector:
    app: example
  ports:
    - port: 8000
      targetPort: 80
  type: LoadBalancer
