ansible/k8s/files/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: sorsby-co-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - "*.lab.sorsby.co"
        - lab.sorsby.co
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
