ansible/k8s/files/alertmanager-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-vs
  namespace: monitoring
spec:
  hosts:
    - alertmanager.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: prometheus-community-kube-alertmanager.monitoring.svc.cluster.local
            port:
              number: 9093
