ansible/k8s/files/influx-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
    - influx.lab.sorsby.co
  gateways:
    - istio-system/sorsby-co-gateway
  http:
    - route:
        - destination:
            host: prometheus-community-kube-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
